INTYGFV-16120: Integrated solution with intygsadmin part